Fixed modal checked icon alignment

--- a/assets/css/modal.scss
+++ b/assets/css/modal.scss
@@ -290,7 +290,6 @@
 				height: 16px;
 				position: absolute;
 				left: 1.7em;
-				top: calc( 50% - 6px );
 			}
 		 a.wpr-cart-button {
 				white-space: nowrap;
